--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@ v class="modal-content about">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
         <div class="modal-header">
-          <span class="project-title">Bookstack</span>
+          <span class="project-title">Folgers - Marketing Predictive Analytics</span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body about">
