--- a/index.html
+++ b/index.html
@@ -353,6 +353,8 @@ Python, R-Programming, Tableau, AWS" />
             <h4>Tools</h4>
             <ul class="news">
               <li>AWS (S3, EC2, VPC, RDS, Redshift, Athena)</li>
+		  </ul>
+		  <ul class="news">
               <li>Microsoft Excel</li>
               <li>SPSS</li>
               </ul>
