--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Python, R-Programming, Tableau, AWS" />
           <div class="col-md-7 header-right">
             <h1>GOWRI DATH</h1>
 		  
-            <h6>Aspiring BI Engineer </h6>
+            <h6>Aspiring Analytics Engineer </h6>
             <div class="hero__links">
               <a href="docs/Gowri_Dath(Resume_2020).pdf" target="_blank" class="hero__resume btn" title="Click to view my Resume">View Resume</a>
               <ul class="hero__social">
